--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -30,11 +30,20 @@
 
   <main>
     <section class="section-about">
-      <div class="u-center-text u-margin-bottom-8">
+      <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">Exciting tours for adventorous people</h2>
       </div>
       <div class="row">
-        <div class="col-1-of-2">Text Content</div>
+        <div class="col-1-of-2">
+          <h3 class="heading-tertiary u-margin-bottom-small">You're goingto fall in love with nature</h3>
+          <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nesciunt odit
+            doloremque commodi minima distinctio, eius quas, eos nulla sapiente aliquid assumenda velit enim mollitia
+            officiis, ipsa maxime quisquam ratione.</p>
+          <h3 class="heading-tertiary u-margin-bottom-small">You're goingto fall in love with nature</h3>
+          <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nesciunt odit
+            doloremque commodi minima distinctio, eius quas </p>
+          <a href="#" class="btn-text">Learn more &rarr;</a>
+        </div>
         <div class="col-1-of-2">Image composition</div>
       </div>
     </section>
