--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -53,6 +53,20 @@
         </div>
       </div>
     </section>
+    <section class="section-features">
+
+      <div class="row">
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-world"></i>
+            <h3 class="heading-tertiary">Explore the icon-basic-world</h3>
+            <p class="feature-box__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo nostrum, fugiat
+              sed ipsa beatae et ea delectus doloremque, laudantium culpa iure praesentium enim. Odit assumenda eaque
+              et molestias. Itaque, nisi?</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 
