--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -59,10 +59,33 @@
         <div class="col-1-of-4">
           <div class="feature-box">
             <i class="feature-box__icon icon-basic-world"></i>
-            <h3 class="heading-tertiary">Explore the icon-basic-world</h3>
+            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
             <p class="feature-box__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo nostrum, fugiat
-              sed ipsa beatae et ea delectus doloremque, laudantium culpa iure praesentium enim. Odit assumenda eaque
-              et molestias. Itaque, nisi?</p>
+              sed ipsa beatae et ea delectus doloremque.</p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-compass"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+            <p class="feature-box__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo nostrum, fugiat
+              sed ipsa beatae et ea delectus doloremque.</p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-map"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+            <p class="feature-box__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo nostrum, fugiat
+              sed ipsa beatae et ea delectus doloremque.</p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-heart"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+            <p class="feature-box__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo nostrum, fugiat
+              sed ipsa beatae et ea delectus doloremque.</p>
           </div>
         </div>
       </div>
