Add botton button-text

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -248,6 +248,7 @@
                 alt="Person on a tour"
                 class="story__img"
               />
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="headerin-tertiary u-margin-bottom-small">
@@ -261,6 +262,33 @@
               </p>
             </div>
           </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Joe Mary</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="headerin-tertiary u-margin-bottom-small">
+                Wow my life so different
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Repellat animi inventore, quos, ex laboriosam harum voluptas
+                minima excepturi sint, eligendi nesciunt tempore sunt possimus!
+                Architecto saepe odit eos est cumque.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u.margin.top.huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
