--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -370,6 +370,40 @@
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Contact us</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Carears</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Privacy Policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="" class="footer__link">Term</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Built by <a href="#" class="footer__link">Cody taft</a> for practice
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <!-- <section class="grid-test">
     <div class="row">
       <div class="col-1-of-2">Col 1 of 2</div>
